Specify correct spacing for case-study-overview

--- a/styles.css
+++ b/styles.css
@@ -1297,11 +1297,11 @@ section:nth-child(odd) .animate.scroll{
     }
     
     .recent-projects-grid .project-description{
-    gap: 10px;
+        gap: 10px;
     }
 
     .project-description .cta-buttons{
-    gap: 50px;
+        gap: 50px;
     }
 
     .case-study-intro{
@@ -1309,11 +1309,17 @@ section:nth-child(odd) .animate.scroll{
       }
       
     .case-intro-left{
-    margin-left: 30px;
+        margin-left: 30px;
     }
     
     .case-intro-right{
-    margin-right: 30px;
+        margin-right: 30px;
+    }
+
+    .case-study-overview{
+        margin-top: 70px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .footer{
@@ -1406,41 +1412,46 @@ section:nth-child(odd) .animate.scroll{
         flex-direction: column;
         gap: 20px;
         margin: 0 30px;
-      }
+    }
 
     .recent-projects-grid .project-description .tech-stack{
-    gap: 40px;
-    margin-bottom: 20px;
+        gap: 40px;
+        margin-bottom: 20px;
     }
 
     .recent-projects-grid .project-description .tech-stack .technology .tech-image img{
-    width: 50px;
-    height: 50px;
+        width: 50px;
+        height: 50px;
     }
 
     .case-study-intro{
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-    margin-top: 120px;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        margin-top: 120px;
     }
     
     .case-intro-left{
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    align-items: center;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        align-items: center;
     }
 
     .case-intro-left h3,
     .case-intro-left h1,
     .case-intro-left p{
-    text-align: center;
+        text-align: center;
     }
     
     .case-intro-right{
-    margin-right: 20px;
-    margin-left: 20px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+
+    .case-study-overview{
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
 
@@ -1481,6 +1492,11 @@ section:nth-child(odd) .animate.scroll{
         margin-left: 10px;
         margin-right: 10px;
     }
+
+    .case-study-overview{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
 
 @media (max-width: 462px){
@@ -1507,8 +1523,8 @@ section:nth-child(odd) .animate.scroll{
     }
 
     .recent-projects-grid .project-description .tech-stack .technology .tech-image img{
-    width: 30px;
-    height: 30px;
+        width: 30px;
+        height: 30px;
     }
 
     .project-description .cta-buttons{
